# my-image-decoder

./: README.md  app.plugin.js  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: myimagedecoder.cpp
android/src/main/java/com/example/imagedecoder/: ImageDecoderModule.java  ImageDecoderPackage.java
android/src/main/java/com/myimagedecoder/: DecodeResult.java  MyImageDecoderJSIInstaller.java  MyImageDecoderModule.java  MyImageDecoderPackage.java
plugin/: withMyImageDecoder.js
src/: index.ts
